Fix floating footer while zoom-out and desktop-site (on mobile)

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -6,6 +6,14 @@
     padding-top: 15px;
 }
 
+::ng-deep app-footer {
+    display: flex;
+    align-items: end;
+    margin-top: 100px;
+
+    /* background-color: green; */
+}
+
 footer {
     color: var(--white5);
     background-color: var(--dark2);
@@ -13,10 +21,7 @@ footer {
     display: flex;
     height: 200px;
     width: 100vw;
-
-    bottom: 0;
-    left: 0;
-    margin-top: 100px;
+    
     align-items: center;
 
     padding-top: 20px;
